# SmartPlantVision

./: .gitignore  Readme.md  ai.py  client.py  public.py  pyproject.toml  requirements.txt  server.py  test.py
pages/: analyze.py  info.py  login.py  register.py  upload.py
src/: ai.py  logger.py  main.py  public.py  test.py
src/pages/: analyze.py  login.py
trainer/: classification.py
